Almost finished with dashboard.html, fixed bugs. Maybe the styling needs to be fixed, everything seems very far apart, the computer screen is too big for the content, and it looks wierd, I also need to change the more svg for the decks because it looks too black. Progressed a lot on create_deck.html, added functionality for adding cards, removing them, and leaving the page. I am missing save changes, and when saving, I must save the deck as a JSON with community sharing on or off.

--- a/static/styles2.css
+++ b/static/styles2.css
@@ -6,82 +6,13 @@ default font size 16px
     box-sizing: border-box;
 }
 
-@media (max-width: 880px) {
-    .grid-container {
-        width: 100%;
-        height: 100%;
-        grid-template-columns: 100% !important;
-        grid-template-rows: 100% !important;
-        overflow: auto;
-    }
-    .grid-item-nav {
-        display: flex;
-        flex-direction: row;
-        position: fixed;
-        bottom: 0;
-        z-index: 3;
-        width: 100%;
-        grid-area: 1 / 1 / 1 / 1;
-        text-align: center;
-    }
-    .grid-item-content {
-        width: 100%;
-        height: auto;
-        grid-area: 1 / 1 / 1 / 1;
-    }
-    .brand {
-        display: none;
-    }
-    .nav-list {
-        width: 100%;
-        background-color: #fff;
-        padding: 0 1.5rem 0 0 !important;
-        margin: auto auto 0 auto;
-    }
-    .nav-list li{
-        height: 3rem;
-        display: inline-block;
-        padding-left: 1.5rem;
-    }
-    .nav-list li a {
-        padding-left: 2.5rem;
-        font-size: 1em;
-    }
-    #dashboard-header-div {
-        margin-left: -1.4rem !important;
-    }
-    .dashboard-btn {
-        width: 3rem !important;
-        height: 3rem !important;
-        border-radius: 50% !important;
-    }
-    .dashboard-btn a {
-        display: none;
-    }
-    #changeColor {
-        margin: 0 1.5rem 0 auto;
-    }
-    @media (max-width: 380px) {
-        .nav-list li {
-            padding-left: 1rem;
-        }
-        .nav-list li a {
-            padding-left: 1.5rem;
-        }
-    }
-}
-
 body {
     font-family: Papyrus, cursive !important;
     margin: 0;
 }
 
-main {
-    height: 100%;
-}
-
 .container {
-    margin: 0 12% 0 12%;
+    margin: 0 15% 0 8%;
     height: 100%;
 }
 
@@ -96,6 +27,10 @@ main {
 
 .mb-3 {
     margin-bottom: 1rem;
+}
+
+.mt-6 {
+    margin-top: 2rem;
 }
 
 .form-field {
@@ -154,7 +89,12 @@ main {
 }
 .grid-item-content {
     width: 100%;
+    height: 100%;
     overflow: auto;
+}
+
+main {
+    height: 155%;
 }
 
 .nav-list {
@@ -183,6 +123,7 @@ main {
 }
 .btn-primary:hover {
     cursor: pointer;
+    background-color: rgb(30, 100, 220);
 }
 
 #login_register {
@@ -235,24 +176,29 @@ main {
 }
 .stat-box {
     border-radius: 15px;
-    width: 15rem;
-    height: 5rem;
+    width: 16rem;
+    height: 7rem;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid gray;
     text-align: center;
     padding-top: 1rem;
+}
+.stat-box div span {
+    font-size: 1.4rem;
+    font-weight: bold;
 }
 
 .decks {
     height: 100%;
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, .5fr));
+    /*grid-template-columns: repeat(auto-fit, minmax(250px, .5fr));*/
+    grid-template-columns: repeat(auto-fit, minmax(330px, 470px));
     column-gap: 2rem;
-    grid-template-rows: repeat(auto-fit, 16.6rem);
+    grid-template-rows: repeat(auto-fit, 16.8rem);
 }
 .deck {
     margin-top: 3rem;
-    border: 1px solid black;
+    border: 1px solid gray;
     border-radius: 20px;
     background-color: white;
 }
@@ -263,7 +209,7 @@ main {
 }
 .deck-more svg {
     display: block;
-    margin: -.1rem 0.5rem 0 auto;
+    margin: .5rem 1rem 0 auto;
     fill: lightgray;
 }
 .deck-more svg:hover {
@@ -344,6 +290,109 @@ input:checked + .slider:before {
     margin-top: 2rem;
 }
 
+#more-menu {
+    height: 100%;
+    width: 100%;
+    display: none;
+}
+#more-menu ul {
+    list-style: none;
+}
+#more-menu ul li a {
+    font-size: 1.8rem;
+    text-decoration: none;
+    color: black;
+}
+
+@media (max-width: 880px) {
+    .grid-container {
+        width: 100%;
+        height: 100%;
+        grid-template-columns: 100% !important;
+        grid-template-rows: 100% !important;
+        overflow: auto;
+    }
+    .grid-item-nav {
+        display: flex;
+        flex-direction: row;
+        position: fixed;
+        bottom: 0;
+        z-index: 3;
+        width: 100%;
+        grid-area: 1 / 1 / 1 / 1;
+        text-align: center;
+    }
+    .grid-item-content {
+        width: 100%;
+        height: auto;
+        grid-area: 1 / 1 / 1 / 1;
+    }
+    .brand {
+        display: none;
+    }
+    .nav-list {
+        width: 100%;
+        background-color: #fff;
+        padding: 0 1.5rem 0 0 !important;
+        margin: auto auto 0 auto;
+    }
+    .nav-list li{
+        height: 3rem;
+        display: inline-block;
+        padding-left: 1.5rem;
+    }
+    .nav-list li a {
+        padding-left: 2.5rem;
+        font-size: 1em;
+    }
+    #dashboard-header-div {
+        margin-left: -1.4rem !important;
+    }
+    .dashboard-btn {
+        width: 3rem !important;
+        height: 3rem !important;
+        border-radius: 50% !important;
+    }
+    .dashboard-btn a {
+        display: none;
+    }
+    #changeColor {
+        margin: 0 1.5rem 0 auto;
+    }
+    .nav-link-text {
+        display: none;
+    }
+    #more-menu {
+        position: relative;
+        top: 0;
+        height: 90%;
+        width: 100%;
+    }
+    #add-card-btn {
+        margin-top: -3rem;
+        padding-bottom: 100px;
+    }
+    @media (max-width: 380px) {
+        .nav-list li {
+            padding-left: 1rem;
+        }
+        .nav-list li a {
+            padding-left: 1.5rem;
+        }
+    }
+}
+.full-span {
+    width: 50%;
+}
+
+#dash-practice button {
+    border-radius: 15px;
+}
+#dash-practice button a {
+    text-decoration: none;
+    color: white;
+}
+
 .field-input {
     height: 2.5rem;
     width: 100%;
@@ -379,6 +428,10 @@ input:checked + .slider:before {
     font-size: 1.3rem;
 }
 
+.deck-create {
+    margin: 0 15% 0 12%;
+}
+
 .deck-create input{
     border-radius: 8px;
     margin-top: -.8rem;
@@ -403,19 +456,25 @@ input:checked + .slider:before {
 
 .del-card {
     display: block;
-    margin: 0.7rem 0.5rem 0 auto;
+    margin: 0.5rem 0.4rem 0 auto;
+}
+.del-card svg {
+    z-index: 3 !important;
 }
 .del-card:hover, .close:hover {
     cursor: pointer;
     color: slategrey;
 }
-
 .deck-info {
-    margin-top: -2.5rem;
+    /*margin-top: -2.5rem;*/
+    margin-top: -1.1rem;
 }
 
 #add-card-btn{
     margin-top: 1.5rem;
+}
+#add-card-btn:hover {
+    cursor: pointer;
 }
 #Capa_1 {
     float: right;
@@ -423,4 +482,41 @@ input:checked + .slider:before {
 #add-card {
     font-size: 1.7rem;
     float: right;
+}
+
+#share-save {
+    margin-top: 1.2rem;
+    display: flex;
+    justify-content: space-between;
+}
+#share-save button {
+    height: 3rem;
+    width: auto;
+    font-size: 1.5rem;
+}
+
+.modal::backdrop {
+    background-color: rgba(0,0,0,0.5);
+}
+
+.modal-btns {
+    display: flex;
+}
+.modal-btns button {
+    margin: 0 1.3rem;
+}
+
+.btn-secondary {
+    font-size: 1rem;
+    width: 6.5rem;
+    height: 2.4rem;
+    background-color: rgb(36, 110, 250);
+    border-radius: 5px;
+    color: white;
+    border: none;
+    outline: none;
+}
+.btn-secondary:hover {
+    cursor: pointer;
+    background-color: rgb(30, 100, 220);
 }
